--- a/MuShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/MuShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
@@ -12,6 +12,10 @@
 <table class="table">
     <tr>
         <th>
+
+        </th>
+
+        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
@@ -23,14 +27,15 @@
         <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
+
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            <img class="img-thumbnail" style="height:50px" src="~/Content/ProductImages/@item.Image"/>
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
@@ -43,10 +48,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Category)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
-        </td>
-        <td>
+         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
